--- a/django_mongo/product_mgt/templates/products_mgt/sign_up.html
+++ b/django_mongo/product_mgt/templates/products_mgt/sign_up.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
+<h2>Register</h2>
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary mt-3">Login</button>
+    <button type="submit" class="btn btn-success mt-3">Sign Up</button>
 </form>
 {% endblock %}
