--- a/django_mongo/product_mgt/templates/products_mgt/HomeProducts.html
+++ b/django_mongo/product_mgt/templates/products_mgt/HomeProducts.html
@@ -3,12 +3,13 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h2>Welcome, {{ user.username }}!</h2>
+<h2>{{ user.username }}</h2>
 
 {% if user.is_superuser %}
-<p>Here’s your dashboard or product list.</p>
 <a href="{% url 'add_product' %}" class="btn btn-primary">Add Product</a>
 <a href="{% url 'list_products' %}" class="btn btn-secondary">View Products</a>
 {% endif %}
+
+
 
 {% endblock %}
