--- a/django_mongo/templates/base.html
+++ b/django_mongo/templates/base.html
@@ -2,23 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}My App{% endblock %}</title>
+    <title>{% block title %}My Platform{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    {% load crispy_forms_tags %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'HomeProducts' %}">KFC</a>
+            <a class="navbar-brand" href="{% url 'home' %}">KFC</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                        {% if user.is_superuser %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'list_products' %}">Manage Products</a></li>
+                        {% elif user.is_staff %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'manage_orders' %}">Manage Orders</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'manage_subscriptions' %}">Manage Subscriptions</a></li>
+                        {% else %}
+                        {% if user.is_authenticated and not user.is_staff and not user.is_superuser %}
+
+                            {% endif %}
+                                <li class="nav-item"><a class="nav-link" href="{% url 'my_orders' %}">My Orders</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'my_subscriptions' %}">My Subscriptions</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'all_products' %}">All Products</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'my_receipts' %}">My Receipts</a></li>  
+                           {% endif %}
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
